environment-repository/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: insurance-prediction-service
spec:
  selector:
    app: insurance-prediction
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
