environment-repository/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insurance-prediction-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: insurance-prediction.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: insurance-prediction-service
                port:
                  number: 80
